start of ae pages

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,12 +9,15 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-8">
+      <div class="col-lg-6">
         <p>We run the communal deed:
           <a href="https://forum.wurmonline.com/index.php?/topic/135999-the-amish-estates-populated-large-well-organized-w-local-busy-alliance">Amish Estates</a>, near Summerholt on Xanadu.</p>
       </div>
-      <div class="col-lg-4">Plots available (msg
+      <div class="col-lg-3">Plots available (msg
         <a href="#">Jackjones</a>)</div>
+      <div class="col-lg-3">
+        <a routerLink="/ae">AE Citizenry</a>
+      </div>
     </div>
     <div class="row">
       <div class="col-lg-2">Join Now!</div>
