More map points and change for NEXA global awesomeness

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,16 @@
-<p-menu #menu popup="popup" [model]="items" appendToBody="true"></p-menu>
-<button type="button" pButton icon="fa fa-bars" class="ui-button-secondary" label="Navigate" (click)="menu.toggle($event)" style="position: fixed; right: 25px; z-index: 50;"></button>
+<p-toolbar>
+    <div class="ui-toolbar-group-left">
+        <span class="toolbar-title">
+            NEXA: a Wurm Online clan
+        </span>
+    </div>
+
+    <div class="ui-toolbar-group-right">
+        <p-menu #menu popup="popup" [model]="items" appendToBody="true"></p-menu>
+        <button type="button" pButton icon="fa fa-bars" class="ui-button-secondary" label="Navigate" (click)="menu.toggle($event)"></button>
+    </div>
+</p-toolbar>
+
+<!-- <p-menu #menu popup="popup" [model]="items" appendToBody="true"></p-menu>
+<button type="button" pButton icon="fa fa-bars" class="ui-button-secondary" label="Navigate" (click)="menu.toggle($event)" style="position: fixed; right: 25px; z-index: 50;"></button> -->
 <router-outlet></router-outlet>
