--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,7 @@
 <div class="container-fluid">
   <img class="back-img" src="../assets/Nexa-LandMass.png" />
   <div class="content">
-    <h1>Welcome to the NEXA Alliance Site</h1>
-    <h3>A Wurm Online Clan</h3>
+    <h2 class="page-header">Welcome to the NEXA Clan Site</h2>
     <div class="row">
       <div class="col-lg-12">
         <p>NEXA stands for Northeast Xanadu Alliance. We are located around the Summerholt starter town on the Xanadu server.</p>
