AE Rules up to date

--- a/src/app/ae/ae.component.html
+++ b/src/app/ae/ae.component.html
@@ -13,10 +13,27 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-4">Option 1: Plot of land big enough to build a home with enough extra space for a small farm &amp; animal pens
-                secured by fences.</div>
-            <div class="col-md-4">Option 2: A pre-built guest house to get you started while out looking at land to acquire of your own, includes
-                a small fenced in yard.</div>
+            <div class="col-md-2">
+                <div class="card" style="width: 19rem;">
+                    <img class="card-img-top" src="https://i.imgur.com/PG75dm6.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Plot of Land</h5>
+                        <p class="card-text">Plot of land big enough to build a home with enough extra space for a small farm &amp; animal pens
+                            secured by fences.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-2">
+                <div class="card" style="width: 19rem;">
+                    <img class="card-img-top" src="https://i.imgur.com/zqMG0C8.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Guest House</h5>
+                        <p class="card-text">A pre-built guest house to get you started while out looking at land to acquire of your own, includes
+                            a small fenced in yard.</p>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="row">
@@ -24,12 +41,16 @@
                 <h4>Amenties:</h4>
                 <ul>
                     <li>Well stocked workshops with large tools and crafting materials to help get you started making your own
-                        gear.</li>
-                    <li>Kitchens with ingredients, cooking utensils, and ovens to help you make your own food.
-                        <strong>Bonus:</strong> the larder in the kitchen is stocked with high quality foods to help keep your nutrition
-                        up.
+                        gear.
                     </li>
-
+                    <li>Kitchens with ingredients, cooking utensils, and ovens to help you make your own food.
+                        <strong>Bonus:</strong> the larder in the kitchen is sometimes stocked with high quality foods to help keep
+                        your nutrition. up.
+                    </li>
+                    <li>
+                        AE villagers will be members of the amazing Wurm Online clan, NEXA. Members of the NEXA alliance are very helpful and enjoy
+                        providing insight to both noobs and returning players alike.
+                    </li>
                 </ul>
             </div>
         </div>
@@ -38,12 +59,31 @@
             <div class="col-lg-12">
                 <h4>Rules:</h4>
                 <ul>
-
-
+                    <li><strong>You need a house: </strong>All houses are deed owner owned. This allows us to 'poof' a house if you quit the game. Houses will need to be planned by a deed manager, security will be set to allow you to manage your house and visitors, and you then complete it with planks or bricks. You must prove you have the materials ready to build the first floor of you house before it can be planned.</li>
+                    <li>
+                        <strong>You need wood:</strong> Chop any trees you like, but pick the sprouts and replant the tree after.</li>
+                    <li>
+                        <strong>You need rocks/ores:</strong> Below AE is a vast mine. All the rock tiles have been mined, but feel
+                        free to mine veins. Additional public miines can be found if you ask in Alliance chat.</li>
+                    <li>
+                        <strong>You need to farm:</strong> Use <a routerLink="/ae-map">the map</a> to find the community farm near to your plot. Feel free to
+                        tend and harvest, and consider donating any extra veggies to the communal kitchen</li>
+                    <li>
+                        <strong>You need clay: </strong> There is a clay tile inside the Pottery Barn. If you drop dirt in the center,
+                        more clay piles up. Dig in the center for clay.</li>
+                    <li>
+                        <strong>You need tools: </strong> The Warehouse has many containers full of tools for use by residents. If
+                        you can't find anything, deed managers or alliance memebers can usual help you find a tool you need.</li>
+                    <li>
+                        <strong>You are concerned about security: </strong>Plot gates and your house are secured via permissions
+                        just for you. This is enough security for you items, so please reconsider locking containers or carts.
+                        (This is a headache to manage when you quit.)</li>
+                    <li><strong>You leave for 30 days: </strong> If you leave don't log in to Wurm Online for more than 30 days, or if you leave Xanadu to found a deed on another server, we will re-assign you plot or guest house as needed. Please don't take advantage of our hosptiality and use Amish Estates as a long term storage facility. </li>
                 </ul>
             </div>
         </div>
 
+        <h3>Resident List (Updated on a monthly basis)</h3>
         <div class="row">
             <div class="col-lg-12">
                 <p-table [value]="citizens">
